--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,8 +1,31 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-/* typography */
+/* mixins, variables, etc. */
+$gray-medium-light: #eaeaea;
 
+/* universal */
+body {
+    padding-top: 60px;
+}
+
+section {
+    overflow: auto;
+}
+
+textarea {
+    resize: vertical;
+}
+
+.center {
+    text-align: center;
+
+    h1 {
+        margin-bottom: 10px;
+    }
+}
+
+/* typography */
 h1,
 h2,
 h3,
@@ -25,7 +48,7 @@ h2 {
     margin-bottom: 30px;
     text-align: center;
     font-weight: normal;
-    color: #777;
+    color: $gray-light;
 }
 
 p {
@@ -33,71 +56,50 @@ p {
     line-height: 1.7em;
 }
 
-/* header */
 
+/* header */
 #logo {
     float: left;
     margin-right: 10px;
     font-size: 1.7em;
-    color: #fff;
+    color: white;
     text-transform: uppercase;
     letter-spacing: -1px;
     padding-top: 9px;
     font-weight: bold;
-}
 
-#logo:hover {
-    color: #fff;
-    text-decoration: none;
-}
-
-body {
-    padding-top: 60px;
-}
-
-section {
-    overflow: auto;
-}
-
-textarea {
-    resize: vertical;
-}
-
-.center {
-    text-align: center;
-}
-
-.center h1 {
-    margin-bottom: 10px;
+    &:hover {
+        color: white;
+        text-decoration: none;
+    }
 }
 
 /* footer */
-
 footer {
     margin-top: 45px;
     padding-top: 5px;
-    border-top: 1px solid #eaeaea;
-    color: #777;
-}
+    border-top: 1px solid $gray-medium-light;
+    color: $gray-light;
 
-footer a {
-    color: #555;
-}
+    a {
+        color: $gray;
 
-footer a:hover {
-    color: #222;
-}
+        &:hover {
+            color: $gray-darker;
+        }
+    }
 
-footer small {
-    float: left;
-}
+    small {
+        float: left;
+    }
 
-footer ul {
-    float: right;
-    list-style: none;
-}
+    ul {
+        float: right;
+        list-style: none;
 
-footer ul li {
-    float: left;
-    margin-left: 15px;
+        li {
+            float: left;
+            margin-left: 15px;
+        }
+    }
 }
